--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         archLifecycleVersion = '1.1.1'
         gradleVersion = '7.1.3'
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+        navigationVersion = "2.4.2"
     }
     repositories {
         google()
